Reworked presets (just Ollama for now) to JSON templates.